--- a/software.html
+++ b/software.html
@@ -165,7 +165,7 @@
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/113134/jobs/4346442002'>Job Application for Sr. Software Engineer (Business Intelligence Solutions & Architect) at Cast & Crew Entertainment Services, LLC</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/113134/jobs/4346442002'>Job Application for Sr. Software Engineer (Business Intelligence Solutions & Architect) at Cast & Crew Entertainment Services, LLC</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -185,11 +185,11 @@
 <p><span class="badge badge-light">Hyderabad</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://wmp.referrals.selectminds.com/jobs/big-data-software-developer-covering-maternity-leave-up-to-12-months-fixed-term-contract-613'>Big Data Software Developer - covering maternity leave up to 12 months fixed term contract - Careers at WMP Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wmp.referrals.selectminds.com/jobs/big-data-software-developer-covering-maternity-leave-up-to-12-months-fixed-term-contract-613'>Big Data Software Developer - covering maternity leave up to 12 months fixed term contract - Careers at WMP Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/liveopscloud/job/ouvCafwv'>Serenova Careers - Software Engineer (Quality Engineer)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/liveopscloud/job/ouvCafwv'>Serenova Careers - Software Engineer (Quality Engineer)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -201,7 +201,7 @@
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692406163-full-stack-software-engineer'>4Catalyzer Full-Stack Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692406163-full-stack-software-engineer'>4Catalyzer Full-Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -217,7 +217,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/deltadental/b5acfab8-0099-4f05-9762-ff219fb2516a'>Delta Dental - Senior Software Engineer - UI/UX</a></h5> 
+<h5><a href='https://jobs.lever.co/deltadental/b5acfab8-0099-4f05-9762-ff219fb2516a'>Delta Dental - Senior Software Engineer - UI/UX</a></h5> 
 <p><span class="badge badge-light">Alpharetta, GA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -241,7 +241,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oRBQ8fwa&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=no59WLwO'>Guidewire Software, Inc. Careers - Senior Software Developer - Mississauga, ON, Canada</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oRBQ8fwa&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=no59WLwO'>Guidewire Software, Inc. Careers - Senior Software Developer - Mississauga, ON, Canada</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -281,7 +281,7 @@
 <p><span class="badge badge-light">India, Hyderabad</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/fanatics/3c842403-cf60-4e89-9d72-7787db5e46e9'>Fanatics - Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/3c842403-cf60-4e89-9d72-7787db5e46e9'>Fanatics - Software Engineer</a></h5> 
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -397,7 +397,7 @@ talented software engineers in implementing, configuring, and customizing our?..
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://activision.referrals.selectminds.com/jobs/junior-software-engineer-4038'>Junior Software Engineer -  Activision Careers</a></h5> 
+<h5><a href='https://activision.referrals.selectminds.com/jobs/junior-software-engineer-4038'>Junior Software Engineer -  Activision Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
