--- a/frontend.html
+++ b/frontend.html
@@ -72,7 +72,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://futrli.workable.com/j/879716E033'>Futrli - Jobs: Front End Engineer - Apply online</a></h5> 
+<h5><a href='https://futrli.workable.com/j/879716E033'>Futrli - Jobs: Front End Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -94,11 +94,11 @@
 <p><span class="badge badge-light">K?ln, Deutschland</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://avency.join.com/jobs/252762-frontend-developer-m-w-d'>Job @ avency (Telgte): Frontend Developer (m/w/d) | JOIN</a></h5> 
+<h5><a href='https://avency.join.com/jobs/252762-frontend-developer-m-w-d'>Job @ avency (Telgte): Frontend Developer (m/w/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://qualitest-1.workable.com/j/82437F3039'>QualiTest - Jobs: R&D Frontend Team Leader - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://qualitest-1.workable.com/j/82437F3039'>QualiTest - Jobs: R&D Frontend Team Leader - Apply online</a></h5> 
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -140,7 +140,7 @@
 experience at an agency level. We are specifically looking for developers that 
 have?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://drover.workable.com/jobs/1077526'>Drover - Jobs: Frontend Developer - Apply online</a></h5> 
+<h5><a href='https://drover.workable.com/jobs/1077526'>Drover - Jobs: Frontend Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Frontend Developer at Drover.</p>
 <hr/>
@@ -198,7 +198,7 @@ have?...</p>
 apps. Since our launch in May 2012, we've expanded into 19 major cities with 
 over?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/servicetitan/jobs/1792879'>Job Application for Software Engineer, Front End at ServiceTitan</a></h5> 
+<h5><a href='https://boards.greenhouse.io/servicetitan/jobs/1792879'>Job Application for Software Engineer, Front End at ServiceTitan</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... This is an exciting role for an engineer to come in and develop the major UI 
 features in a rapidly growing startup. We build for perfection, use the most 
@@ -273,7 +273,7 @@ built as a Single Page App using Angular (2+) and React application. We are?...<
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://streetbees.workable.com/jobs/1082873'>Front-End Developer (ReactJS) - Apply online - Streetbees - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://streetbees.workable.com/jobs/1082873'>Front-End Developer (ReactJS) - Apply online - Streetbees - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... ... Building apps that control, direct and query our AI / Machine Learning 
 technologies, allowing our teams to train the ML models, and allowing analysts to 
@@ -284,13 +284,13 @@ make?...</p>
 <p>5 days ago ... ... infrastructure solutions, proactively guard against cyber threats, and leverage 
 machine learning alongside financial engineering to continuously turn data into?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sevdesk.recruitee.com/o/frontend-entwickler-mwd'>
+<h5><a href='https://sevdesk.recruitee.com/o/frontend-entwickler-mwd'>
       Frontend Entwickler (m/w/d) - sevDesk
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aircall/fecc6c85-97cb-40de-b184-be5922000ed7'>Aircall - Senior Software Engineer - Front-end - Communications Platform</a></h5> 
+<h5><a href='https://jobs.lever.co/aircall/fecc6c85-97cb-40de-b184-be5922000ed7'>Aircall - Senior Software Engineer - Front-end - Communications Platform</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -326,11 +326,11 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://medbridge.applytojob.com/apply/9Gmh11A1A4/Front-End-Software-Development-Engineer-III-Seattle-WA'>Front End Software Development Engineer III (Seattle, WA) - MedBridge - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medbridge.applytojob.com/apply/9Gmh11A1A4/Front-End-Software-Development-Engineer-III-Seattle-WA'>Front End Software Development Engineer III (Seattle, WA) - MedBridge - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351802-front-end-developer'>Lecle Vietnam Front-end Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351802-front-end-developer'>Lecle Vietnam Front-end Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
