--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -85,7 +85,7 @@ preferred); Experience with automating systems and infrastructure via Ansible,?.
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tanda/5a227175-4991-4f59-ad13-ec9f68fe8f79'>Tanda - Senior Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tanda/5a227175-4991-4f59-ad13-ec9f68fe8f79'>Tanda - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -97,7 +97,7 @@ preferred); Experience with automating systems and infrastructure via Ansible,?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://digitalassetsdatainc.recruitee.com/o/infrastructuredevopssite-reliability-engineer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://digitalassetsdatainc.recruitee.com/o/infrastructuredevopssite-reliability-engineer'>
       Infrastructure/DevOps/Site Reliability Engineer - Digital Assets Data, Inc.
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -161,7 +161,7 @@ PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692204432-cloud-site-reliability-engineer-sre-'>4Catalyzer Cloud Site Reliability Engineer (SRE) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692204432-cloud-site-reliability-engineer-sre-'>4Catalyzer Cloud Site Reliability Engineer (SRE) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -173,7 +173,7 @@ PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/99E63C1886'>iziwork - Jobs: Site Reliability Engineer - Apply online</a></h5> 
+<h5><a href='https://workable.com/j/99E63C1886'>iziwork - Jobs: Site Reliability Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>il y a 5?jours ... 4 ? 8 ans d'exp?rience comme BackEnd Developer et/ou DevOps en 
 environnement agile et sur des projets SaaS. Expertise JavaScript et id?alement 
@@ -418,7 +418,7 @@ durably while increasing product velocity, and further deliver on our mission to
 and support the infrastructure and services that define the future of the Box 
 Identity?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/servicetitan/jobs/1752603'>Job Application for Manager, Site Reliability Engineering at ServiceTitan</a></h5> 
+<h5><a href='https://boards.greenhouse.io/servicetitan/jobs/1752603'>Job Application for Manager, Site Reliability Engineering at ServiceTitan</a></h5> 
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -438,7 +438,7 @@ Identity?...</p>
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://oneinamil.workable.com/j/407855BB2E'>OneinaMil - Jobs: Remote Site Reliability Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oneinamil.workable.com/j/407855BB2E'>OneinaMil - Jobs: Remote Site Reliability Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
